fixing spacing of social bars

--- a/src/main/webapp/less/main.less
+++ b/src/main/webapp/less/main.less
@@ -788,7 +788,7 @@ HOME PAGE
 
 .home-container {
   display: block;
-  margin-bottom: 25px;
+  margin-bottom: 0px;
   text-align: center;
 }
 
@@ -922,7 +922,7 @@ HOME PAGE
 
 /* Social proof buttons from GitHub & Twitter */
 .bs-docs-social {
-  padding: 15px 0;
+  padding: 5px 0;
   text-align: center;
   /*background-color: #f5f5f5;
   border-top: 1px solid #fff;
